spel mistake-correct

--- a/Devil-face.html
+++ b/Devil-face.html
@@ -19,10 +19,10 @@
          <!--For Right Eye-->
          <div class="reye"> </div> 
 
-         <!--For Left Eye Bols-->
+         <!--For Left Eye Bolls-->
          <div class="lbol"></div>
 
-         <!--For Right Eye Bols-->
+         <!--For Right Eye Bolls-->
          <div class="rbol"></div>
 
          <!--For Left Teeth-->
